@@ -82,7 +82,8 @@ namespace Banshee
                 new ArgumentLayout("help",           "List available command line arguments"),
                 new ArgumentLayout("audio-cd <dev>", "Start Banshee and/or select source mapped to <device>"),
                 new ArgumentLayout("dap <dev>",      "Start Banshee and/or select source mapped to <device>"),
-                new ArgumentLayout("version",        "Show Banshee Version")
+                new ArgumentLayout("no-source-change", "Do not change sources with --dap or --audio-cd"),
+                new ArgumentLayout("version",        "Show Banshee Version"),
             }, args, "enqueue");
             
             HandleShallowCommands();
@@ -227,12 +228,18 @@ namespace Banshee
                     present = false;
                     break;
                 case "audio-cd":
-                    remote_player.SelectAudioCd(Globals.ArgumentQueue[arg]);
+                    if(!Globals.ArgumentQueue.Contains("no-source-change")) {
+                        remote_player.SelectAudioCd(Globals.ArgumentQueue[arg]);
+                    }
+                    
                     dequeue = false;
                     Present(remote_player);
                     break;
                 case "dap":
-                    remote_player.SelectDap(Globals.ArgumentQueue[arg]);
+                    if(!Globals.ArgumentQueue.Contains("no-source-change")) {
+                        remote_player.SelectDap(Globals.ArgumentQueue[arg]);
+                    }
+                    
                     dequeue = false;
                     Present(remote_player);
                     break;
